# bimap

./: .gitignore  META  Makefile  README  bimap.install  bimap.opam  dune-project  opam
src/lib/: .merlin  bimap.ml  bimap.ml.dependstig  bimap.mli  bimap.mli.bak  bimap_bad.mli  bimap_class.ml  bimap_class.mli  bimap_module.ml  bimap_module.mli  bimap_multi.ml  bimap_multi.ml.old  bimap_multi.mli  bimap_multi.mli.old  bimap_multi_class.ml  bimap_multi_class.mli  bimap_multi_inherit.ml  bimap_multi_module.ml  bimap_multi_module.mli  bimap_multi_new_interface_so_far  bimap_multi_wrong.mli  bimap_single.ml  bimap_single.mli  bimap_single.mli_fix  bimap_single_class.ml  bimap_single_class.mli  bimap_single_module.ml  bimap_single_module.mli  bimap_type.ml
src/test/: .merlin  bimap_tests.ml  dune
